Major simplification underway.

--- a/Capture/App.config
+++ b/Capture/App.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<appSettings>
+		<add key="PathData" value="Q:\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\DATA"/>
+		<add key="PathBackup" value="Q:\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\DATA"/>
+
+	</appSettings>
 	<connectionStrings>
 		<add name ="characterisation"
-			 connectionString="Data Source=V-COOL-APP1\COOLLED;Initial Catalog=characterisation;User Id=coolledrw;Password=99bapJog;Encrypt=False"
+			 connectionString="Data Source=V-COOL-APP1\COOLLED;Initial Catalog=characterisation;Integrated Security=True;Encrypt=False"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
