Handover Check-In

--- a/Capture/App.config
+++ b/Capture/App.config
@@ -3,7 +3,9 @@
 	<appSettings>
 		<add key="PathData" value="Q:\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\DATA"/>
 		<add key="PathBackup" value="Q:\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\DATA"/>
-
+		<add key="PathCalFile" value="Q:\Life Sciences &amp; Analytical\PRODUCTION ENGINEERING\Equipment Records\Equipment\EQ144 - Spectrometer\EQ144-01-08-22-CAL_OOIIrrad.cal"/>
+		<add key="SpectrometerName" value="USB2000PLUS"/>
+		<add key="SpectrometerSerialNo" value="SN12345"/>
 	</appSettings>
 	<connectionStrings>
 		<add name ="characterisation"
