--- a/Capture/Capture.csproj
+++ b/Capture/Capture.csproj
@@ -14,6 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="NetOceanDirect">
+      <HintPath>..\..\..\..\..\..\Program Files\Ocean Insight\OceanDirect SDK\lib\NetOceanDirect.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
