Capturing light source spectrum.

--- a/Capture/App.config
+++ b/Capture/App.config
@@ -6,6 +6,7 @@
 		<add key="PathCalFile" value="Q:\Life Sciences &amp; Analytical\PRODUCTION ENGINEERING\Equipment Records\Equipment\EQ144 - Spectrometer\EQ144-01-08-22-CAL_OOIIrrad.cal"/>
 		<add key="SpectrometerName" value="USB2000PLUS"/>
 		<add key="SpectrometerSerialNo" value="SN12345"/>
+		<add key="Collection Area" value="1"/>
 	</appSettings>
 	<connectionStrings>
 		<add name ="characterisation"
