write csv, add hardware

--- a/Capture/App.config
+++ b/Capture/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="PathData" value="Q:\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\DATA"/>
-		<add key="PathBackup" value="Q:\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\DATA"/>
-		<add key="PathCalFile" value="Q:\Life Sciences &amp; Analytical\PRODUCTION ENGINEERING\Equipment Records\Equipment\EQ144 - Spectrometer\EQ144-01-08-22-CAL_OOIIrrad.cal"/>
+		<add key="PathData" value="\\V-COOL-DC1\Coolled\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\DATA"/>
+		<add key="PathBackup" value="\\V-COOL-DC1\Coolled\Life Sciences &amp; Analytical\PRODUCT CHARACTERISATION DATA\BACKUP"/>
+		<add key="PathCalFile" value="\\V-COOL-DC1\Coolled\Life Sciences &amp; Analytical\PRODUCTION ENGINEERING\Equipment Records\Equipment\EQ144 - Spectrometer\EQ144-01-08-22-CAL_OOIIrrad.cal"/>
 		<add key="SpectrometerName" value="USB2000PLUS"/>
-		<add key="SpectrometerSerialNo" value="SN12345"/>
+		<add key="SpectrometerSerialNo" value="USB2+H15239"/>
 		<add key="Collection Area" value="1"/>
 	</appSettings>
 	<connectionStrings>
